src/objects/Allergy_Master__c.object
<CustomObject>
    <fields>
        <fullName>Allergy_Type__c</fullName>
        <label>Allergy Type</label>
        <picklist>
            <picklistValues>
                <fullName>Non-Drug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Allergy Master</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01Ic00000000HCfEAM_00Nc0000000HMZ3EAO</fullName>
        <active>true</active>
        <field>Allergy__c.Allergies__c</field>
        <filterItems>
            <field>$Source.Allergy_Type__c</field>
            <operation>equals</operation>
            <valueField>Allergy_Master__c.Allergy_Type__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Allergy_Allergies</name>
        <sourceObject>Allergy__c</sourceObject>
    </namedFilters>
    <pluralLabel>Allergy Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>